# FlowSelect

./: .gitignore  .impeccable.md  LICENSE  README.en.md  README.md  ai-studio-export-2026-01-28.md  bugfix.md  electron-builder.config.mjs  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.electron.json  tsconfig.scripts.json  vite.config.ts
.circleci/: config.yml
.github/: pull_request_template.md
.trellis/: workflow.md
browser-extension/: background.js  bilibili-button.css  bilibili-detector.js  bilibili-detector.test.js  content-script.js  control-style-utils.js  direct-download-quality.js  dom-injection-utils.js  douyin-button.css  douyin-detector.js  flowselect-shared.css  generic-video-detector.js  generic-video-detector.test.js  injection-debug-config.js  (+34 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: deno  pinterest-runtime.py  videodl-server-aarch64-apple-darwin  videodl-server-x86_64-apple-darwin  yt-dlp-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/pinterest-sidecar/: __main__.py  lock.json  runtime.py
src-tauri/resources/locales/: contract.json
src-tauri/resources/locales/en/: desktop.json
src-tauri/resources/locales/zh-CN/: common.json  desktop.json  native.json
src-tauri/runtime-proxy/: Cargo.toml
src-tauri/runtime-proxy/src/: main.rs
src-tauri/src/: lib.rs  main.rs  native_i18n.rs
src-tauri/tests/fixtures/pinterest/: carousel-video.json  image-only.json  top-level-video.json
src-tauri/windows/: hooks.nsh
(+343 files in other folders)
